# src/app.js
@@ -4,11 +4,17 @@ import helmet from 'helmet'
 import compression from 'compression'
 import pinoHttp from 'pino-http'
 import { logger } from './logger.js'
-import healthRouter from './routes/health.js'
+import cookieParser from 'cookie-parser'
+
 import { notFound } from './middlewares/notFound.js'
 import { errorHandler } from './middlewares/errorHandler.js'
+
+import { mountAdmin } from './admin/index.js'
+
+import healthRouter from './routes/health.js'
 import authRouter from './routes/auth.routes.js'
-import cookieParser from 'cookie-parser'
+import usersRouter from './routes/users.routes.js'
+import categoriesRouter from './routes/categories.routes.js'
 
 const app = express()
 
@@ -19,12 +25,16 @@ app.use(express.json({ limit: '1mb' }))
 app.use(pinoHttp({ logger }))
 app.use(cookieParser())
 
-app.use('/health', healthRouter)
 app.use('/seeds', express.static('seeds'))
+
+app.use('/health', healthRouter)
 app.use('/api/auth', authRouter)
+app.use('/api/users', usersRouter)
+app.use('/api/categories', categoriesRouter)
+
+mountAdmin(app)
 
 app.use(notFound)
-
 app.use(errorHandler)
 
 export default app
